Fixed alignment issues

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -17,7 +17,6 @@ h6, .h6 {
 
 body p {
   font-family: 'Open Sans';
-  text-align: left;
 }
 
 li {
@@ -73,6 +72,7 @@ li {
 
 .card-text {
   font-size: 85%;
+  -align: center;
 }
 
 footer {
@@ -105,4 +105,9 @@ footer p {
   text-transform: uppercase;
   font-size: 18px;
   font-weight: 700;
+}
+
+.portfolio-container > h1 {
+  color: #2c3b3f;
+  text-align: left;
 }
